--- a/grouptask1.ipynb
+++ b/grouptask1.ipynb
@@ -46,10 +46,11 @@
         "colab": {}
       },
       "source": [
-        "m=0#initial start value of gradient\n",
+        "m=1 #initial start value of gradient\n",
         "c=0#initial start value of y-ntercept\n",
         "L=0.0001#learning ratetry playing around with the value to see which ones converge\n",
-        "epoch=100#define whatever number of epochs you want but mind both efficiency and accuracy issues\n",
+        "lmbd=1.2 #lambda\n",
+        "epoch=100 #define whatever number of epochs you want but mind both efficiency and accuracy issues\n",
         "epoch_error_list=[]\n",
         "epoch_count_list=[]"
       ],
@@ -85,7 +86,7 @@
         "from google.colab import files\n",
         "uploaded=files.upload()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -178,7 +179,7 @@
         "    epoch_error_list=epoch_error_list[:]\n",
         "    epoch_error_list.append(epoch_error)\n",
         "    #minimize the error function by computing partial derivatives\n",
-        "    D_m=(-2/N)*sum(X*(Y-Y_hat))\n",
+        "    D_m=(-2/N)*sum(X*(Y-Y_hat))- lmbd*(m/abs(m))\n",
         "    D_c=(-2/N)*sum(Y-Y_hat)\n",
         "    #Apply gradient descent formular to update both m and c into new values\n",
         "    m=m-(L * D_m)\n",
@@ -226,7 +227,7 @@
         "epoch_count_list.clear()\n",
         "epoch_error_list.clear()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
