--- a/CAT/cross_validation.ipynb
+++ b/CAT/cross_validation.ipynb
@@ -57,6 +57,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2f7vuW83cv55",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "Importing dependencies"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mcMHfZzqIMN6",
@@ -68,6 +79,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yWkvhayVcycE",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "Importing the dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -128,6 +150,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "otSF6unBc1Xu",
+        "colab_type": "text"
+      },
+      "source": [
+        "A higher value of K means less accuraccy in the testing set depending on data size. For instance, using a K of 10 in data with only 10 records means only 1 will be used for testing, hence not a good determinant of accuraccy but if there are 10,000 records and 1000 are used for testing, it might be an accurate determinant. The default recommended value of K is 5 to give 20% of the reecords for testing the model's accuracy"
       ]
     },
     {
